# tlx

./: .clang-format  .clang-tidy  .travis.yml  AUTHORS  CMakeLists.txt  CodingStyle.md  Doxyfile  README.md  appveyor.yml  sonar-project.properties
.github/workflows/: cmake.yml
.woodpecker/: build-test.yaml  clang-tidy.yaml
misc/: mk-doxygen-travis.sh
misc/cmake/: tlx-config.cmake.in  tlx-version.cmake.in  (+1 more)
tests/: CMakeLists.txt  algorithm_multiway_merge_benchmark.cpp  algorithm_multiway_merge_benchmark.plot  algorithm_multiway_merge_test.cpp  algorithm_random_bipartition_shuffle.cpp  algorithm_test.cpp  backtrace_test.cpp  btree_speedtest.cpp  btree_speedtest.plot  btree_test.cpp  cmdline_parser_example.cpp  cmdline_parser_test.cpp  container_radixheap_test.cpp  counting_ptr_test.cpp  delegate_test.cpp  deprecated_test.cpp  die_test.cpp  digest_test.cpp  function_chain_test.cpp  function_stack_test.cpp  logger_test.cpp  loser_tree_test.cpp  lru_cache_test.cpp  math_test.cpp  meta_call_for_test.cpp  meta_fold_test.cpp  meta_has_member_test.cpp  meta_log2_test.cpp  meta_test.cpp  meta_vmap_for_test.cpp  meta_vreduce_test.cpp  multi_timer_test.cpp  ring_buffer_test.cpp  semaphore_test.cpp  simple_vector_test.cpp  siphash_test.cpp  sort_networks_test.cpp  sort_parallel_mergesort_test.cpp  sort_strings_example.cpp  sort_strings_parallel_test.cpp  (+6 more)
tests/algorithm/: multiway_merge_benchmark.cpp  multiway_merge_test.cpp  random_bipartition_shuffle.cpp
tests/container/: btree_speedtest.cpp  btree_speedtest.plot  btree_test.cpp  d_ary_heap_speedtest.cpp  d_ary_heap_speedtest.plot  d_ary_heap_test.cpp  loser_tree_test.cpp  lru_cache_test.cpp  radix_heap_test.cpp  radixheap_test.cpp  ring_buffer_test.cpp  simple_vector_test.cpp  splay_tree_test.cpp  string_view_test.cpp
tests/math/: aggregate_test.cpp  polynomial_regression_test.cpp
tests/meta/: call_for_test.cpp  fold_test.cpp  function_chain_test.cpp  function_stack_test.cpp  has_member_test.cpp  log2_test.cpp  vmap_for_test.cpp
tlx/: CMakeLists.txt  algorithm.hpp  allocator_base.hpp  backtrace.cpp  backtrace.hpp  btree.hpp  btree_map.hpp  btree_multimap.hpp  btree_multiset.hpp  btree_set.hpp  cmdline_parser.cpp  cmdline_parser.hpp  container.hpp  counting_ptr.hpp  define.hpp  delegate.hpp  die.cpp  die.hpp  digest.hpp  logger.cpp  logger.hpp  loser_tree.hpp  lru_cache.hpp  main.dox  math.hpp  meta.hpp  multi_timer.cpp  multi_timer.hpp  port.hpp  ring_buffer.hpp  semaphore.hpp  simple_vector.hpp  siphash.hpp  sort.hpp  stack_allocator.hpp  string.hpp  thread_barrier_mutex.hpp  thread_barrier_spin.hpp  thread_pool.cpp  thread_pool.hpp  (+4 more)
tlx/algorithm/: exclusive_scan.hpp  is_sorted_cmp.hpp  merge_advance.hpp  merge_combine.hpp  multisequence_partition.hpp  multisequence_selection.hpp  multiway_merge.hpp  multiway_merge_splitting.hpp  parallel_multiway_merge.cpp  parallel_multiway_merge.hpp  random_bipartition_shuffle.hpp
tlx/container/: btree.hpp  btree_map.hpp  btree_multimap.hpp  btree_multiset.hpp  btree_set.hpp  d_ary_addressable_int_heap.hpp  d_ary_heap.hpp  loser_tree.hpp  lru_cache.hpp  radix_heap.hpp  radixheap.hpp  ring_buffer.hpp  simple_vector.hpp  splay_tree.hpp  string_view.hpp
tlx/define/: attribute_always_inline.hpp  attribute_fallthrough.hpp  attribute_format_printf.hpp  attribute_packed.hpp  attribute_warn_unused_result.hpp  constexpr.hpp  deprecated.hpp  endian.hpp  likely.hpp  visibility_hidden.hpp
tlx/die/: core.cpp  core.hpp
tlx/digest/: md5.cpp  md5.hpp  sha1.cpp  sha1.hpp  sha256.cpp  sha256.hpp  sha512.cpp  sha512.hpp
tlx/logger/: all.hpp  array.hpp  core.cpp  core.hpp  deque.hpp  map.hpp  set.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  wrap_unprintable.hpp
tlx/math/: abs_diff.hpp  aggregate.hpp  aggregate_min_max.hpp  bswap.hpp  bswap_be.hpp  bswap_le.hpp  clz.hpp  ctz.hpp  div_ceil.hpp  ffs.cpp  ffs.hpp  ilog2.cpp  ilog2.hpp  integer_log2.cpp  integer_log2.hpp  is_power_of_two.cpp  is_power_of_two.hpp  polynomial_regression.hpp  popcount.hpp  power_to_the.hpp  rol.hpp  ror.hpp  round_to_power_of_two.cpp  round_to_power_of_two.hpp  round_up.hpp  sgn.hpp
tlx/meta/: apply_tuple.hpp  call_for_range.hpp  call_foreach.hpp  call_foreach_tuple.hpp  call_foreach_tuple_with_index.hpp  call_foreach_with_index.hpp  enable_if.hpp  fold_left.hpp  fold_left_tuple.hpp  fold_right.hpp  fold_right_tuple.hpp  foldl.hpp  foldl_tuple.hpp  foldr.hpp  foldr_tuple.hpp  function_chain.hpp  function_stack.hpp  has_member.hpp  has_method.hpp  if.hpp  index_sequence.hpp  is_std_array.hpp  is_std_pair.hpp  is_std_tuple.hpp  is_std_vector.hpp  log2.hpp  no_operation.hpp  static_index.hpp  vexpand.hpp  vmap_for_range.hpp  vmap_foreach.hpp  vmap_foreach_reduce_tuple.hpp  vmap_foreach_tuple.h  vmap_foreach_tuple.hpp  vmap_foreach_tuple_reduce.hpp  vmap_foreach_tuple_with_index.hpp  vmap_foreach_with_index.hpp  vreduce.hpp  vreduce_tuple.hpp
tlx/port/: setenv.cpp  setenv.hpp
tlx/sort/: parallel_mergesort.hpp  strings.cpp  strings.hpp  strings1.cpp  strings2.cpp  strings3.cpp  strings_impl.cpp  strings_impl.hpp  strings_lcp_impl.cpp  strings_lcp_impl.hpp  strings_parallel.hpp
tlx/sort/networks/: best.hpp  bose_nelson.hpp  bose_nelson_parameter.hpp  cswap.hpp
tlx/sort/strings/: insertion_sort.hpp  multikey_quicksort.hpp  parallel_sample_sort.hpp  radix_sort.hpp  sample_sort_tools.hpp  string_ptr.hpp  string_set.hpp
tlx/string/: appendline.cpp  base64.cpp  base64.hpp  bitdump.cpp  bitdump.hpp  compare_icase.cpp  compare_icase.hpp  contains.cpp  contains.hpp  contains_word.cpp  contains_word.hpp  ends_with.cpp  ends_with.hpp  equal_icase.cpp  equal_icase.hpp  erase_all.cpp  erase_all.hpp  escape_html.cpp  escape_html.hpp  escape_uri.cpp  escape_uri.hpp  expand_environment_variables.cpp  expand_environment_variables.hpp  extract_between.cpp  extract_between.hpp  format_iec_units.hpp  format_si_iec_units.cpp  format_si_iec_units.hpp  format_si_units.hpp  hash_djb2.hpp  hash_sdbm.hpp  hexdump.cpp  hexdump.hpp  index_of.cpp  index_of.hpp  join.cpp  join.hpp  join_generic.hpp  join_quoted.cpp  join_quoted.hpp  (+34 more)
(+2 files in other folders)
